--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -30,13 +30,22 @@
             android:layout_alignParentRight="true" />
 
         <TextView
+            android:id="@+id/message_timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2011.11.11 11:11"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/show_message"
+            android:textSize="12dp"
+            android:textColor="@android:color/darker_gray"/>
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/txt_seen"
-            android:layout_below="@id/show_message"
+            android:layout_below="@id/message_timestamp"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
-
 
     </RelativeLayout>
 
